:sparkles: Adding Navbar & Header Content

--- a/index.html
+++ b/index.html
@@ -4,8 +4,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mongoo Website</title>
+    <link rel="stylesheet" href="../03-Integration/style/style.css">
 </head>
 <body>
+
+    <div class="head">
+        <div class="navbar">
+            <div class="logo">
+                <img src="../03-Integration/media/mangoo.png" alt="Logo" />
+            </div>
+            <div class="nav-texts">
+                <div class="home"><a href="#">Accueil</a></div>
+                <a href="#">Qui sommes-nous ?</a>
+                <a href="#">Menu</a>
+                <a href="#">Contact</a>
+                <button class="commander">Commander</button>
+            </div>
+        </div>
+    <header>
+        <img class="tagline" src="media/Tagline.png" alt="logo-header">
+        <div class="socials-logo">
+            <img class="logo" src="media/Socials links.png" alt="logo-socials">
+        </div>
+    </header>
+
+    <p>test</p>
+
+    </div>
+
+    <p>test après</p>
     
 </body>
 </html>
