:art::sparkles: Adding second section 'Qui sommes nous'

--- a/index.html
+++ b/index.html
@@ -27,12 +27,26 @@
             <img class="logo" src="media/Socials links.png" alt="logo-socials">
         </div>
     </header>
-
-    <p>test</p>
-
     </div>
 
-    <p>test après</p>
+    <div class="gauche">
+        <h1 class="first-title">Une Salade sur mesure</h1>
+        <br>
+        <p class="first-subtitle">MONGOO vous permet de composer votre salade<br> 
+            selon vos envies et vos goûts.
+            <br><br> 
+            Une quarantaine d'ingrédients frais et préparés le<br>  
+            matin même sur place vous sont proposés au <br> 
+            quotidien.
+            <br> <br> 
+            Depuis maintenant 10 ans, MONGOO fait le <br> 
+            bonheur des gourmets et des gourmands, alors<br>  
+            pourquoi pas vous ? </p>
+    </div>
+    <div class="droite">
+        <img class="produit1" src="media/salade-detoure.png" alt="logo-produit1">
+    </div>
+
     
 </body>
 </html>
