:art::sparkles: Adding info button for second section + style

--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
             Depuis maintenant 10 ans, MONGOO fait le <br> 
             bonheur des gourmets et des gourmands, alors<br>  
             pourquoi pas vous ? </p>
+
+        <button class="info">En savoir +</button>
     </div>
     <div class="droite">
         <img class="produit1" src="media/salade-detoure.png" alt="logo-produit1">
