:sparkles::art: Addition of the third section and first version of the responsive

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 </head>
 <body>
 
+    <!-- Header & Navbar -->
+
     <div class="head">
         <div class="navbar">
             <div class="logo">
@@ -28,6 +30,8 @@
         </div>
     </header>
     </div>
+    
+    <!-- Second Section -->
 
     <div class="gauche">
         <h1 class="first-title">Une Salade sur mesure</h1>
@@ -49,6 +53,28 @@
         <img class="produit1" src="media/salade-detoure.png" alt="logo-produit1">
     </div>
 
-    
+    <!-- Third Section -->
+    <section class="third-page">
+        <div>
+            <div class="third-container">
+                <div class="title-container">
+                    <h1 class="second-title">Préparé sur place </h1>
+                    <h1 class="second-title2"> et avec amour</h1>
+                </div>
+                <p class="second-subtitle">MONGOO vous permet de composer votre salade<br> 
+                    selon vos envies et vos goûts.
+                    <br><br> 
+                    Une quarantaine d'ingrédients frais et préparés le<br>  
+                    matin même sur place vous sont proposés au <br> 
+                    quotidien.
+                    <br> <br> 
+                    Depuis maintenant 10 ans, MONGOO fait le <br> 
+                    bonheur des gourmets et des gourmands, alors<br>  
+                    pourquoi pas vous ? </p>
+
+                <button class="second-info">En savoir +</button>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
