:art::sparkles: Fixing Third Section & Make this responsive

--- a/index.html
+++ b/index.html
@@ -28,34 +28,40 @@
         <div class="socials-logo">
             <img class="logo" src="media/Socials links.png" alt="logo-socials">
         </div>
+        <br>
+        <br>
     </header>
     </div>
     
     <!-- Second Section -->
-
-    <div class="gauche">
-        <h1 class="first-title">Une Salade sur mesure</h1>
+    <div class="second-section">
         <br>
-        <p class="first-subtitle">MONGOO vous permet de composer votre salade<br> 
-            selon vos envies et vos goûts.
-            <br><br> 
-            Une quarantaine d'ingrédients frais et préparés le<br>  
-            matin même sur place vous sont proposés au <br> 
-            quotidien.
-            <br> <br> 
-            Depuis maintenant 10 ans, MONGOO fait le <br> 
-            bonheur des gourmets et des gourmands, alors<br>  
-            pourquoi pas vous ? </p>
+        <br>
+        <div class="gauche">
+            <h1 class="first-title">Une Salade sur mesure</h1>
+            <br>
+            <p class="first-subtitle">MONGOO vous permet de composer votre salade<br> 
+                selon vos envies et vos goûts.
+                <br><br> 
+                Une quarantaine d'ingrédients frais et préparés le<br>  
+                matin même sur place vous sont proposés au <br> 
+                quotidien.
+                <br> <br> 
+                Depuis maintenant 10 ans, MONGOO fait le <br> 
+                bonheur des gourmets et des gourmands, alors<br>  
+                pourquoi pas vous ? </p>
 
-        <button class="info">En savoir +</button>
-    </div>
-    <div class="droite">
-        <img class="produit1" src="media/salade-detoure.png" alt="logo-produit1">
+            <button class="info">En savoir +</button>
+        </div>
+        <div class="droite">
+            <img class="produit1" src="media/salade-detoure.png" alt="logo-produit1">
+        </div>
     </div>
 
     <!-- Third Section -->
-    <section class="third-page">
-        <div>
+        <div class="third-class">
+            <br>
+            <br>
             <div class="third-container">
                 <div class="title-container">
                     <h1 class="second-title">Préparé sur place </h1>
@@ -74,7 +80,11 @@
 
                 <button class="second-info">En savoir +</button>
             </div>
+            <br>
+            <br>
+            <br>
+            <br>
         </div>
-    </section>
+        
 </body>
 </html>
