--- a/index.html
+++ b/index.html
@@ -85,6 +85,54 @@
             <br>
             <br>
         </div>
+
+        <!-- Fourth Section -->
+
+        <div class="fourth-class">
+            <h1 class="fourth-title">Vous avez dit menu ?</h1>
+            <p class="fourth-subtitle">Un menu MONGOO, c'est une salade accompagnée d'une boisson et d'un dessert.
+                <br> Mais attention, pas n'importe quelle boisson et n'importe quel dessert...<br><br>
+                Découvrez notre large sélection de boissons et desserts pour accompagner votre repas</p>
+
+            <div class="fourth-gauche">
+                <div class="list-menu">
+                    <div class="menu">
+                        <h1>Salade j'aime</h1>
+                        <p class="price">7.70€</p>
+                        <p class="content">1 base · 4 ingrédients verts · Sauce 
+                            Petit plus et pain offert</p>
+                    </div>
+                    <div class="menu">
+                        <h1>Salade j'adore</h1>
+                        <p class="price">8.80€</p>
+                        <p class="content">1 base · 3 ingrédients verts & 1 bleu · Sauce
+                            Petit plus et pain offert</p>
+                    </div>
+                    <div class="menu best-offer">
+                        <h1>Salade 2-2</h1>
+                        <p class="price">9.90€</p>
+                        <p class="content">1 base · 2 ingrédients verts & 2 bleus · Sauce
+                            Petit plus et pain offert</p>
+                    </div>
+                    <div class="menu">
+                        <h1>Salade passion</h1>
+                        <p class="price">11.00 €</p>
+                        <p class="content">1 base · 1 ingrédient verts & 3 bleus · Sauce
+                            Petit plus et pain offert</p>
+                    </div>
+                    <div class="menu">
+                        <h1>Salade folie</h1>
+                        <p class="price">12.10€</p>
+                        <p class="content">1 base · 4 ingrédients bleus · Sauce
+                            Petit plus et pain offert</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="fourth-droite">
+
+            </div>
+        </div>
         
 </body>
 </html>
