:art: Set css for the left part of fourth section

--- a/index.html
+++ b/index.html
@@ -99,31 +99,31 @@
                     <div class="menu">
                         <h1>Salade j'aime</h1>
                         <p class="price">7.70€</p>
-                        <p class="content">1 base · 4 ingrédients verts · Sauce 
+                        <p class="content">1 base · 4 ingrédients verts · Sauce <br>
                             Petit plus et pain offert</p>
                     </div>
                     <div class="menu">
                         <h1>Salade j'adore</h1>
                         <p class="price">8.80€</p>
-                        <p class="content">1 base · 3 ingrédients verts & 1 bleu · Sauce
+                        <p class="content">1 base · 3 ingrédients verts & 1 bleu · Sauce <br>
                             Petit plus et pain offert</p>
                     </div>
                     <div class="menu best-offer">
                         <h1>Salade 2-2</h1>
                         <p class="price">9.90€</p>
-                        <p class="content">1 base · 2 ingrédients verts & 2 bleus · Sauce
+                        <p class="content">1 base · 2 ingrédients verts & 2 bleus · Sauce <br>
                             Petit plus et pain offert</p>
                     </div>
                     <div class="menu">
                         <h1>Salade passion</h1>
                         <p class="price">11.00 €</p>
-                        <p class="content">1 base · 1 ingrédient verts & 3 bleus · Sauce
+                        <p class="content">1 base · 1 ingrédient verts & 3 bleus · Sauce <br>
                             Petit plus et pain offert</p>
                     </div>
                     <div class="menu">
                         <h1>Salade folie</h1>
                         <p class="price">12.10€</p>
-                        <p class="content">1 base · 4 ingrédients bleus · Sauce
+                        <p class="content">1 base · 4 ingrédients bleus · Sauce <br>
                             Petit plus et pain offert</p>
                     </div>
                 </div>
