:art::white_check_mark: Setting right part of fourth section

--- a/index.html
+++ b/index.html
@@ -130,7 +130,11 @@
             </div>
 
             <div class="fourth-droite">
-
+                <h1 class="green">Force vert ?</h1>
+                <h1 class="blue">Force bleue ?</h1>
+                <p> Ne perdez pas une seconde, faites votre choix
+                    et venez chercher votre salade dans 20min !</p>
+                <button> Passer commande </button>
             </div>
         </div>
         
