:art: Setting Five Section and his css

--- a/index.html
+++ b/index.html
@@ -137,6 +137,66 @@
                 <button> Passer commande </button>
             </div>
         </div>
+
+        <!-- Five Section -->
+
+        <div class="five-class">
+            <br>
+            <div class="green-card">
+                <h1>Chez les verts</h1>
+                <div class="green-content">
+                    <div class="first-green-content">
+                        <p>Croûtons</p>
+                        <p>Œuf (1)</p>
+                        <p>Betteraves</p>
+                        <p>Carottes</p>
+                        <p>Choux rouges</p>
+                        <p>Concombre</p>
+                        <p>Lentilles</p>
+                        <p>Maïs</p>
+                        <p>Oignons rouges</p>
+                    </div>
+
+                    <div class="second-green-content">
+                        <p>Radis</p>
+                        <p>Pommes</p>
+                        <p>Oignons frits</p>
+                        <p>Emmental</p>
+                        <p>Mozzarella</p>
+                        <p>Mimolette</p>
+                        <p>Surimi</p>
+                        <p>Saucisses</p>
+                    </div>
+                </div>
+
+            </div>
+
+            <div class="blue-card">
+                <h1>Chez les bleus</h1>
+                <div class="blue-content">
+                    <div class="first-blue-content">
+                        <p>Aubergines</p>
+                        <p>Avocat</p>
+                        <p>Cantal</p>
+                        <p>Cœur d'artichaut</p>
+                        <p>Grana Panado</p>
+                        <p>Jambon cru</p>
+                        <p>Crevettes</p>
+                    </div>
+
+                    <div class="second-blue-content">
+                        <p>Feta</p>
+                        <p>Melon</p>
+                        <p>Œuf poché</p>
+                        <p>Poivrons</p>
+                        <p>Thon</p>
+                        <p>Tomates cerises</p>
+                        <p>Tomates séchées</p>
+                    </div>
+                </div>
+            </div>
+
+        </div>
         
 </body>
 </html>
