--- a/index.html
+++ b/index.html
@@ -89,6 +89,8 @@
         <!-- Fourth Section -->
 
         <div class="fourth-class">
+            <br>
+            <br>
             <h1 class="fourth-title">Vous avez dit menu ?</h1>
             <p class="fourth-subtitle">Un menu MONGOO, c'est une salade accompagnée d'une boisson et d'un dessert.
                 <br> Mais attention, pas n'importe quelle boisson et n'importe quel dessert...<br><br>
@@ -197,6 +199,84 @@
             </div>
 
         </div>
+
+        <!-- Six Section -->
+
+        <div class="six-section">
+            <div class="six-gauche">
+                <img class="produit2" src="media/nguyen.png" alt="logo-produit2">
+            </div>
+
+            <div class="six-droite">
+                <div class="six-container">
+                    <h1 class="six-title">Envie de partager ?</h1>
+                    <p class="six-subtitle">Toute l'année, on recrute des employés motivés<br>pour tous nos restaurants ! <br> N'hésitez pas à postuler !</p>
+                </div>
+                
+                <div class="form">
+                    <form action="/process-form" method="POST">
+                        <div class="form-content">
+                            <div class="form-line">
+                            <label for="nom">Nom :</label>
+                            <input type="text" id="nom" name="nom" required>
+                            </div>
+                            <div class="form-line space-left">
+                            <label for="prenom">Prénom :</label>
+                            <input type="text" id="prenom" name="prenom" required>
+                            </div>
+                        </div>
+                            <div class="form-line">
+                            <label for="email">Email :</label>
+                            <input type="email" id="email" name="email" required>
+                            </div>
+                            <div class="form-line">
+                            <label for="motivation">Votre motivation en quelques mots :  </label>
+                            <textarea id="motivation" name="motivation" rows="4" required></textarea>
+                            </div>
+                            <div>
+                            <button type="submit">Postuler</button>
+                            </div>
+                      </form>
+                </div>
+
+            </div>
+
+            <br>
+            <br>
+
+        </div>
+
+        <footer class="footer">
+            <div class="container">
+                <div class="content">
+                    <img src="../03-Integration/media/mangoo.png" alt="">
+                    <div class="column">
+                        <h1>Commander</h1>
+                        <ul>
+                            <li><a href="#">Passer commande</a></li>
+                            <li><a href="#">Nos menus</a></li>
+                            <li><a href="#">Restaurant</a></li>  
+                        </ul>
+                    </div>
+                    <div class="column">
+                        <h1>Informations</h1>
+                        <ul>
+                            <li><a href="#">FAQ</a></li>
+                            <li><a href="#">Mentions légales</a></li>
+                            <li><a href="#">Recrutement</a></li>  
+                        </ul>
+                    </div>   
+                    <div class="column">
+                        <h1>Nous retrouver</h1>
+                            <ul>
+                                <li><a href="#">Facebook</a></li>
+                                <li><a href="#">Twiiter</a></li>
+                                <li><a href="#">instagram</a></li>
+                            </ul>  
+                    </div>
+                </div>
+            </div>
+        </footer>
         
 </body>
 </html>
