Fixing Footer & Six section responsive

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                 <h1 class="blue">Force bleue ?</h1>
                 <p> Ne perdez pas une seconde, faites votre choix
                     et venez chercher votre salade dans 20min !</p>
-                <button> Passer commande </button>
+                <button class="passer"> Passer commande </button>
             </div>
         </div>
 
@@ -234,7 +234,7 @@
                             <textarea id="motivation" name="motivation" rows="4" required></textarea>
                             </div>
                             <div>
-                            <button type="submit">Postuler</button>
+                            <button class="formbutton" type="submit">Postuler</button>
                             </div>
                       </form>
                 </div>
