--- a/03-Integration/index.html
+++ b/03-Integration/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mongoo Website</title>
-    <link rel="stylesheet" href="/style/style.css">
+    <link rel="stylesheet" href="../03-Integration/style/style.css">
 </head>
 <body>
 
@@ -13,7 +13,7 @@
     <div class="head">
         <div class="navbar">
             <div class="logo">
-                <img src="/media/mangoo.png" alt="Logo" />
+                <img src="../03-Integration/media/mangoo.png" alt="Logo" />
             </div>
             <div class="nav-texts">
                 <div class="home"><a href="#">Accueil</a></div>
@@ -261,7 +261,7 @@
         <footer class="footer">
             <div class="container">
                 <div class="content">
-                    <img src="/media/mangoo.png" alt="">
+                    <img src="../03-Integration/media/mangoo.png" alt="">
                     <div class="column">
                         <h1>Commander</h1>
                         <ul>
